# Library-Management-System

./: .gitignore  README.md
TASK_1/: data.sql  queries.sql
TASK_2/library-etl/: database.py  pyproject.toml
TASK_2/library-etl/CSV_DATA/: authors.csv
phase1-sql/: README.md  schema.sql
phase2-data-ingestion/: README.md  api_client.py  api_fetcher.py  books.json  data_processor.py  main.py  models.py  schemas.py
phase2-data-ingestion/CSV_DATA/: books.csv  libraries.csv  members.csv
phase3-django-api/: README.md  main.py  pyproject.toml
phase3-django-api/config/: settings.py  urls.py
