[project]
name = "librarymanagementsystem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "coverage>=7.14.1",
    "django>=6.0.6",
    "django-environ>=0.13.0",
    "django-filter>=25.2",
    "djangorestframework>=3.17.1",
    "drf-spectacular>=0.29.0",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
]
